--- a/html/css/style.css
+++ b/html/css/style.css
@@ -296,6 +296,15 @@ p, .not-selectable {
   margin-bottom: 1em;
 }
 
+.footer-content {
+  font-size: 0.8em;
+  margin: 0 2em 0.5em 2em;
+}
+
+.footer-author {
+  float: right;
+}
+
 /* ensures the increment/decrement arrows always display */
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button {
