More proper font

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -10,7 +10,7 @@ body {
   text-rendering: optimizeLegibility;
   background-color: #747474;
   overflow-x: hidden;
-  font-family: Times New Roman;
+  font-family: "Times New Roman", Times, serif;
 }
 
 body.waiting * {
